project/logs/20250418_142951.log
Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create DeD12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:16:23: error: no matching function for call to 'mul'
    output.position = mul(input.position, gTransformationMatrix);
                      ^~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'float' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'ConstantBuffer<TransformationMatrix>' to 'float' for 2nd argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'ConstantBuffer<TransformationMatrix>' to 'vector<float, 1>' for 2nd argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'ConstantBuffer<TransformationMatrix>' to 'matrix<float, 1, 1>' for 2nd argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^                   ~~~~~~~~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 4>' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 1>' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~
Object3D.VS.hlsl:16:23: note: candidate function not viable: no known conversion from 'float32_t4' to 'matrix<float, 1, 1>' for 1st argument
    output.position = mul(input.position, gTransformationMatrix);
                      ^   ~~~~~~~~~~~~~~

